# native

./: .gitignore  CMakeLists.txt  README.md  RULES.md
cmake/: native_examples.cmake  toolchain-haiku.cmake  toolchain-mingw.cmake
cmake/toolchains/: haiku.cmake  mingw-w64.cmake
docker/: .dockerignore  CMakeLists.txt  base.Dockerfile  haiku-beapi.Dockerfile  linux-elementary.Dockerfile  linux-motif.Dockerfile  linux-openlook.Dockerfile  linux-windowmaker.Dockerfile  linux-x11.Dockerfile  windows-win32.Dockerfile
docs/: CMakeLists.txt  chapter-0_build-system.md  chapter-1_application.md
docs/api/: CMakeLists.txt  Doxyfile.in
docs/api/dox/: geometry.dox  mainpage.dox  screen.dox
docs/notes/: README.md  backend-open-issues.md  gnustep-port.md  haiku-remote-runtime.md  lab-source-todos.md  libs-x11.txt  macos-remote-runtime.md  production-source-todos.md  windows-wine-runtime.md  wmaker-port.md
docs/the-book/: build-system.md  feature-matrix.md  getting-started.md  index.md  patterns-application.md  patterns-geometry.md  patterns-layering.md  patterns-signals.md  patterns-windows.md  patterns.md
examples/: CMakeLists.txt
examples/01_app_example/: CMakeLists.txt  main.cpp
examples/02_painter_example/: CMakeLists.txt  main.cpp
examples/03_menu_example/: CMakeLists.txt  main.cpp
examples/04_button_example/: CMakeLists.txt  main.cpp
examples/05_button_configurations_example/: CMakeLists.txt  main.cpp
examples/06_layout_absolute_example/: CMakeLists.txt  main.cpp
examples/07_layout_grid_example/: CMakeLists.txt  main.cpp
examples/app-example/: CMakeLists.txt  main.cpp
examples/app_example/: CMakeLists.txt  main.cpp
include/: native.h
lab/: .gitmodules  CMakeLists.txt  Makefile  Makefile.nmake  README.md  tasks.json
lab/include/: nice.hpp
lab/samples/: 1_minimal.cpp  2_raster.cpp  3_sound.cpp  Makefile
lab/samples/resources/: tut_raster.cpp
lab/scripts/: README.md  nice.template  sm.cpp
lab/scripts/windev/minimal/: minimal.sln  minimal.vcxproj  minimal.vcxproj.filters  nice.hpp
lab/src/: app.cpp  app.hpp  app_wnd.cpp  app_wnd.hpp  artist.hpp  audio.hpp  exception.hpp  geometry.hpp  includes.hpp  literals.hpp  mouse_info.hpp  property.hpp  raster.hpp  resized_info.hpp  signal.hpp  wave.hpp  wnd.cpp  wnd.hpp
lab/src/native/sdl/: native_app.cpp  native_app_wnd.cpp  native_app_wnd.hpp  native_artist.cpp  native_audio.cpp  native_audio.hpp  native_includes.hpp  native_raster.cpp  native_raster.hpp  native_start.cpp  native_types.hpp  native_wnd.cpp  native_wnd.hpp
lab/src/native/win/: native_app.cpp  native_app_wnd.cpp  native_app_wnd.hpp  native_artist.cpp  native_audio.cpp  native_audio.hpp  native_includes.hpp  native_raster.cpp  native_raster.hpp  native_start.cpp  native_types.hpp  native_wnd.cpp  native_wnd.hpp
lab/src/native/x11/: native_app.cpp  native_app_wnd.cpp  native_app_wnd.hpp  native_artist.cpp  native_audio.cpp  native_audio.hpp  native_includes.hpp  native_raster.cpp  native_start.cpp  native_types.hpp  native_wnd.cpp  native_wnd.hpp
src/: CMakeLists.txt  app.cpp  app_wnd.cpp  bindings.h  control_paint.cpp  control_paint_backend.h  geometry.cpp  gpx.cpp  gpx_img.h  gpx_wnd.h  img.cpp  layout.cpp  pen.cpp  screen.cpp  signal.cpp  wnd.cpp
src/haiku/: CMakeLists.txt  NativeWindow.cpp  NativeWindow.h  app.cpp  main.cpp  screen.cpp  wnd.cpp
src/linux/: CMakeLists.txt
src/linux/gnustep/: app.mm  globals.h  globals.mm  screen.mm
src/linux/openmotif/: CMakeLists.txt  app_wnd.cpp
src/linux/sdl2/: CMakeLists.txt  screen.cpp  wnd.cpp
src/linux/x11/: CMakeLists.txt  Dockerfile  app_wnd.cpp  globals.cpp  globals.h  gpx_wnd.cpp  screen.cpp
src/mac/: CMakeLists.txt  NativeApp.mm  NativeWindow.h  NativeWindow.mm  app.mm  app_wnd.mm  globals.mm  screen.mm  wnd.mm
src/platform/: CMakeLists.txt
src/platform/linux/: main.cpp
src/platform/windows/: CMakeLists.txt  entry.cpp
src/toolkits/: CMakeLists.txt
src/toolkits/gemix/: CMakeLists.txt  app.cpp  app_wnd.cpp  button.cpp  control_paint_backend.cpp  font.cpp  globals.cpp  globals.h  gpx_img.cpp  gpx_img.h  gpx_wnd.cpp  gpx_wnd.h  img.cpp  menu.cpp  screen.cpp  wnd.cpp
src/toolkits/gnustep/: CMakeLists.txt  app.mm  app_wnd.mm  button.mm  font.mm  globals.h  globals.mm  gpx_img.mm  gpx_wnd.mm  menu.mm  screen.mm  wnd.mm
src/toolkits/openlook/: CMakeLists.txt  app.cpp  app_wnd.cpp  globals.cpp  globals.h  gpx_img.cpp  gpx_wnd.cpp  img.cpp  screen.cpp  wnd.cpp
src/toolkits/openmotif/: CMakeLists.txt  app.cpp  app_wnd.cpp  button.cpp  control_paint_backend.cpp  font.cpp  globals.cpp  globals.h  gpx_img.cpp  gpx_wnd.cpp  main.cpp  menu.cpp  screen.cpp  wnd.cpp
src/toolkits/sdl2/: CMakeLists.txt  app.cpp  app_wnd.cpp  button.cpp  control_paint_backend.cpp  font.cpp  globals.cpp  globals.h  gpx_img.cpp  gpx_wnd.cpp  main.cpp  menu.cpp  screen.cpp  text.cpp  wnd.cpp
src/toolkits/sdl3/: CMakeLists.txt  main.cpp  renderer.cpp  window.cpp
src/toolkits/x11/: CMakeLists.txt  app.cpp  app_wnd.cpp  button.cpp  control_paint_backend.cpp  font.cpp  globals.cpp  globals.h  gpx_img.cpp  gpx_wnd.cpp  img.cpp  menu.cpp  screen.cpp  wnd.cpp
src/windows/: app.cpp  app_wnd.cpp  main.cpp  screen.cpp  wnd.cpp
tools/: gemix-local-run.sh
tools/macos-remote/: build.sh  common.sh  debug.sh  run.sh  smoke-test.sh  sync.sh
