set(NATIVE_TOOLKIT "X11" CACHE STRING "Toolkit backend to use (SDL, OpenMotif, etc.)")

if(NATIVE_TOOLKIT STREQUAL "SDL2")
    add_subdirectory(sdl2)
elseif(NATIVE_TOOLKIT STREQUAL "OpenMotif")
    add_subdirectory(openmotif)
elseif(NATIVE_TOOLKIT STREQUAL "X11")
    add_subdirectory(x11)
else()
    message(FATAL_ERROR "Unknown toolkit: ${NATIVE_TOOLKIT}")
endif()