set(TOOLKIT "X11" CACHE STRING "Toolkit backend to use (SDL, OpenMotif, etc.)")

if(TOOLKIT STREQUAL "SDL2")
    add_subdirectory(sdl2)
elseif(TOOLKIT STREQUAL "MOTIF")
    add_subdirectory(openmotif)
elseif(TOOLKIT STREQUAL "X11")
    add_subdirectory(x11)
else()
    message(FATAL_ERROR "Unknown toolkit: ${NATIVE_TOOLKIT}")
endif()