set(TOOLKIT "GNUSTEP" CACHE STRING "Toolkit backend to use (SDL, OpenMotif, etc.)")

if(TOOLKIT STREQUAL "SDL2")
    add_subdirectory(sdl2)
elseif(TOOLKIT STREQUAL "MOTIF")
    add_subdirectory(openmotif)
elseif(TOOLKIT STREQUAL "X11")
    add_subdirectory(x11)
elseif(TOOLKIT STREQUAL "OPENLOOK")
    add_subdirectory(openlook)
elseif(TOOLKIT STREQUAL "GNUSTEP")
    add_subdirectory(gnustep)
elseif(TOOLKIT STREQUAL "ELEMENTARY")
    add_subdirectory(elementary)
else()
    message(FATAL_ERROR "Unknown toolkit: ${NATIVE_TOOLKIT}")
endif()